# SYNZ

./: .gitignore  CMakeLists.txt  GITHUB_UPDATE.md  IMPLEMENTATION_PLAN.md  Master_Roadmap.md  PROTOTYPE_IDEAS.md  README.md  enable_gpu.bat  lilith_test.cs  setup_synz.bat  start_synz.bat
TheBody/: VTSClient.cs
TheBrain/: brain_server.py  chat_client.py  debug_brain.py  ears.py  editor_agent.py  face_server.py  inference_server.py  memory_agent.py  meta.pkl  model.py  personality.py  personality_config.json  personality_data.json  requirements.txt  search_agent.py  sight.py  synz_memories.json  test_interaction.py  test_mic.py  test_udp.py  tokenizer.py  train.py  train_scratch.py  tts_engine.py
TheWatcher/: main.cpp
_Archive/: legacy_lora_train.py  test_sentinel_simulation.py
docs/: Integration_Handbook.md
src/: CMakeLists.txt  CodeMonitor.h  LlamaEngine.h  LogMonitor.h  NeuroLink.h  UDPServer.h  main.cpp
tests/: mock_body.py  mock_watcher.py
unity_scripts/: AutoCrash.cs  CubismSYNZController.cs  FaceBridge.cs  Live2DController.cs  NeuroLinkClient.cs  SYNZLive2DController.cs  SYNZ_Bootstrap.cs  SimpleAudioPlayer.cs
魔女/: Scene1.anim  Scene1.fade.asset  Scene1.motion3.json  Sleep.motion3.json  blush.exp3.asset  bowtie.exp3.asset  fz.exp3.asset  gamecontroller.exp3.asset  ghost.exp3.asset  glasses.exp3.asset  hat.exp3.asset  hearteyes.exp3.asset  idle.motion3.json  idlefinal.fade.asset  idlefinal.motion3.json  items_pinned_to_model.json  mic.exp3.asset  shadedangryface.exp3.asset  sleepfinal.anim  sleepfinal.fade.asset  sleepfinal.motion3.json  魔女.controller  (+6 more)
(+41 files in other folders)
